--- a/.gitconfig
+++ b/.gitconfig
@@ -86,6 +86,7 @@ tf = ls-tree -r --name-only
 # list aliases
 la = "!git config -l | grep alias | cut -c 7-"
 [user]
-	name = Tyler Paxman
+	name = tpaxman
 [core]
 	autocrlf = true
+	editor = vim
