--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -60,9 +60,9 @@ m = commit --amend --verbose
 
 d = diff
 ds = diff --stat
-dcs = diff --compact-summary
+dc = diff --compact-summary
 dw = diff --ignore-cr-at-eol --word-diff-regex="[^[:space:],]+"
-dc = diff --cached
+dca = diff --cached
 a = add
 ap = add -p
 aa = add .
@@ -78,8 +78,10 @@ oldies = rev-list --all
 s = status -s
 co = checkout
 cob = checkout -b
+
 # list branches sorted by last modified
-b = "!git for-each-ref --sort='-authordate' --format='%(authordate)%09%(objectname:short)%09%(refname)' refs/heads | sed -e 's-refs/heads/--'"
+#b = "!git for-each-ref --sort='-authordate' --format='%(authordate)%09%(objectname:short)%09%(refname)' refs/heads | sed -e 's-refs/heads/--'"
+b = branch
 
 # tracked files (must type a branch name after)
 tf = ls-tree -r --name-only
