--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -91,5 +91,6 @@ la = "!git config -l | grep alias | cut -c 7-"
 [user]
 	name = tpaxman
 [core]
-	autocrlf = true
 	editor = vim
+[init]
+	defaultBranch = main
